# channel3-take-home-2026

./: .gitignore  README.md  ai.py  api.py  cost_check.py  main.py  models.py  prompts.py  pyproject.toml
api/: __init__.py
api/routers/: frontend.py  products.py
data/: ace.html  adaysmarch.html  card.html  coverscore.html  data_out.csv  jacket.html  repub.html  snaggedbagged.html
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/brand/[slug]/: page.tsx
frontend/app/product/[slug]/: page.tsx
frontend/components/: Navbar.tsx  ProductCard.tsx  ProductCardSkeleton.tsx  ProductListRow.tsx  ProductListSkeleton.tsx  VirtualizedProductList.tsx
frontend/components/ui/: input.tsx
frontend/lib/: api.ts  types.ts
scripts/: extract.py  run_model_test.py
